third_party/move/tools/move-decompiler/tests/compiler-v2-test/ability-transform/copy_ability_tuple.exp
module 0x42::M {
    struct R has key {
        f: u64,
    }
    public fun f(r: R): (R, u64) {
        (r, 0)
    }
    public fun g(s: &signer) {
        let (_t4,_t5) = f(R{f: 1});
        move_to(_t4, s);
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: cannot use `R` with an operator which expects a value of type `&signer`
   ┌─ copy_ability_tuple.move:10:17
   │
10 │         move_to(_t4, s);
   │                 ^^^
